♻️ refactor:  Leiloes endpoints